guest-rollout/guestbook-ui-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-test-4
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    canary:
      # stableService: express-active
      # canaryService: express-preview
      # trafficRouting:
      #   nginx:
      #     stableIngress: express-stable-ingress
      # analysis:
      #   templates:
      #     - templateName: mixed-roll-tests
      #   startingStep: 1
      steps:
        - pause: {duration: 100s}
        - analysis:
            templates:
            - templateName: mixed-roll-tests
        - pause: {}
        - setWeight: 50
        - pause: {duration: 100s}
        
  selector:
    matchLabels:
      app: express-microservice
  template:
    metadata:
      labels:
        app: express-microservice
    spec:
      containers:
        - name: express-microservice
          image: xeonalex/guesbook:0.1
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
